Workaround Outlook 2019 ORGANIZER and ATTENDEE addition into plain events
On Fedora Workstation 38 with Evolution 3.48.4-1 and Fedora 39 with Evolution 3.50.2-1 I could reproduce this behaviour. I use EWS to access a mailbox on a Microsoft Exchange Server 2016. For the following text Outlook means "Microsoft Outlook 2019 on Windows 10 Enterprise (both 64-bit)".
Steps to reproduce:
- either:
- create appointment in Evolution (specifics do not matter; all-day-event and short-term events are affected the same)
- modify and save it in Outlook
- or:
- create appointment in Outlook
- for both then:
- in Evolution's calendar view you can see a group icon in the upper left corner of the appointment, i.e. detected as a meeting
- open it; you see in table: Attendee=your account, Type=Individual, Role=Required Participant, Status=Accepted
- change description and try to save; error message:
Failed to modify an event in the calendar "..."
Cannot modify calendar object: At least one recipient isn't valid., A message can't be sent because it contains no recipients.
- in the meeting window you can use "Options -- [] Attendees" to turn off Evolution's participants list and save the appointment; unfortunately this is not permanet, i.e. the list reappears if you click "save" or ("save and close" and reopen appointment)
Expected behavior:
- I guess "valid.," is a typo, i.e. remove ",".
- Evolution does not detect meeting as meeting, but as appointment.
- Evolution can save without workaround and converts meeting to appointment permanently.
Thank you very much for your help.
Edited by René Genz