I#251 - Workaround Outlook 2019 ORGANIZER and ATTENDEE addition into plain events

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/251